# QualsSync

./: .gitignore  README.md  aider-readme.txt  api_client.py  api_loader.py  assigned_competency.py  build.bat  build.ps1  competency.py  config.json.template  config.py  excel_loader.py  exp1.py  gui.py  hardcoded_rules.py  main.py  mappings-dev.json  mappings-live.json  mappings.json  mappings_new.json  pyproject.toml  serializer.py  sync_service.py  update-dependencies.bat
.github/workflows/: release.yml
