[project]
name = "QualsSync"
version = "0.1.0"
package-mode = false
description = "A Tkinter-based Excel-to-API mapper for pilot qualifications"
authors = [
    { name = "Bruno Tagliapietra", email = "bruno.tagliapietra@gmail.com" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.13.5"
pandas = ">=2.3.1,<3.0.0"
openpyxl = ">=3.1.3,<3.2.0"
requests = ">=2.32.4,<3.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

